--- a/frontend/src/js/areas.json
+++ b/frontend/src/js/areas.json
@@ -1,14 +1,228 @@
 [
   {
     "name": "Kaufrecht",
-    "tags": ["Art. 184 OR", "Art. 185 OR", "Art. 186 OR", "Art. 187 OR", "Art. 188 OR", "Art. 189 OR", "Art. 190 OR", "Art. 191 OR", "Art. 192 OR", "Art. 193 OR", "Art. 194 OR", "Art. 195 OR", "Art. 196 OR", "Art. 196a OR", "Art. 197 OR", "Art. 198 OR", "Art. 199 OR", "Art. 200 OR", "Art. 201 OR", "Art. 202 OR", "Art. 203 OR", "Art. 204 OR", "Art. 205 OR", "Art. 206 OR", "Art. 207 OR", "Art. 208 OR", "Art. 209 OR", "Art. 210 OR", "Art. 211 OR", "Art. 212 OR", "Art. 213 OR", "Art. 214 OR", "Art. 215 OR", "Kaufvertrag", "Rechte und Pflichten", "Nutzen und Gefahr", "Vorbehalt", "kantonale Gesetzgebung", "Gegenstand", "Farniskauf", "Verpflichtungen des Verkäufers", "Übergabe", "Kosten der Übergabe", "Transportkosten", "Verzug in der Übergabe", "Rücktritt im kaufmännischen Verkehr", "Schadenersatzpflicht", "Schadenberechnung", "Gewährleistung des veräusserten Rechtes", "Verpflichtung zur Gewährleistung", "Rechtsgewährleistung", "Rechtsmangel", "Verfahren", "Streitverkündung", "Ansprüche des Käufers", "vollständige Entwehrung", "Herausgabe ohne richterliche Entscheidung"]
+    "tags": [
+      "Art. 184 OR",
+      "Art. 185 OR",
+      "Art. 186 OR",
+      "Art. 187 OR",
+      "Art. 188 OR",
+      "Art. 189 OR",
+      "Art. 190 OR",
+      "Art. 191 OR",
+      "Art. 192 OR",
+      "Art. 193 OR",
+      "Art. 194 OR",
+      "Art. 195 OR",
+      "Art. 196 OR",
+      "Art. 196a OR",
+      "Art. 197 OR",
+      "Art. 198 OR",
+      "Art. 199 OR",
+      "Art. 200 OR",
+      "Art. 201 OR",
+      "Art. 202 OR",
+      "Art. 203 OR",
+      "Art. 204 OR",
+      "Art. 205 OR",
+      "Art. 206 OR",
+      "Art. 207 OR",
+      "Art. 208 OR",
+      "Art. 209 OR",
+      "Art. 210 OR",
+      "Art. 211 OR",
+      "Art. 212 OR",
+      "Art. 213 OR",
+      "Art. 214 OR",
+      "Art. 215 OR",
+      "Kaufvertrag",
+      "Rechte und Pflichten",
+      "Nutzen und Gefahr",
+      "Vorbehalt",
+      "kantonale Gesetzgebung",
+      "Gegenstand",
+      "Farniskauf",
+      "Verpflichtungen des Verkäufers",
+      "Übergabe",
+      "Kosten der Übergabe",
+      "Transportkosten",
+      "Verzug in der Übergabe",
+      "Rücktritt im kaufmännischen Verkehr",
+      "Schadenersatzpflicht",
+      "Schadenberechnung",
+      "Gewährleistung des veräusserten Rechtes",
+      "Verpflichtung zur Gewährleistung",
+      "Rechtsgewährleistung",
+      "Rechtsmangel",
+      "Verfahren",
+      "Streitverkündung",
+      "Ansprüche des Käufers",
+      "vollständige Entwehrung",
+      "Herausgabe ohne richterliche Entscheidung"
+    ]
   },
   {
     "name": "Werkvertragsrecht",
-    "tags": ["Art. 363 OR", "Art. 364 OR", "Art. 365 OR", "Art. 366 OR", "Art. 367 OR", "Art. 368 OR", "Art. 369 OR", "Art. 370 OR", "Art. 371 OR", "Werkvertrag", "Begriff", "Wirkungen", "Pflichten des Unternehmers", "Allgemeines", "Betreffend den Stoff", "Stoff", "Werkstoff", "Rechtzeitige Vornahme der Arbeit", "vertragsgemässe Ausführung der Arbeit", "Rechtzeitige Vornahme und vertragsgemässe Ausführung der Arbeit", "Haftung für Mängel", "Feststellung der Mängel", "Mängelrüge", "Recht des Bestellers bei Mängeln", "Verantwortlichkeit des Bestellers", "Genehmigung des Werkes", "Verjährung"]
+    "tags": [
+      "Art. 372 OR",
+      "Art. 373 OR",
+      "Art. 374 OR",
+      "Art. 375 OR",
+      "Art. 376 OR",
+      "Art. 377 OR",
+      "Art. 378 OR",
+      "Art. 379 OR",
+      "Art. 363 OR",
+      "Art. 364 OR",
+      "Art. 365 OR",
+      "Art. 366 OR",
+      "Art. 367 OR",
+      "Art. 368 OR",
+      "Art. 369 OR",
+      "Art. 370 OR",
+      "Art. 371 OR",
+      "Werkvertrag",
+      "Begriff",
+      "Wirkungen",
+      "Pflichten des Unternehmers",
+      "Allgemeines",
+      "Betreffend den Stoff",
+      "Stoff",
+      "Werkstoff",
+      "Rechtzeitige Vornahme der Arbeit",
+      "vertragsgemässe Ausführung der Arbeit",
+      "Rechtzeitige Vornahme und vertragsgemässe Ausführung der Arbeit",
+      "Haftung für Mängel",
+      "Feststellung der Mängel",
+      "Mängelrüge",
+      "Recht des Bestellers bei Mängeln",
+      "Verantwortlichkeit des Bestellers",
+      "Genehmigung des Werkes",
+      "Verjährung"
+    ]
   },
   {
     "name": "Arbeitsrecht",
-    "tags": ["Art. 319 OR", "Art. 320 OR", "Art. 321 OR", "Art. 321a OR", "Art. 321b OR", "Art. 321c OR", "Art. 321d OR", "Art. 321e OR", "Art. 322 OR", "Art. 322a OR", "Art. 322b OR", "Art. 322c OR", "Art. 322d OR", "Art. 323 OR", "Art. 323a OR", "Art. 323b OR", "Art. 324 OR", "Art. 324a OR", "Art. 324b OR", "Art. 325 OR", "Art. 326 OR", "Art. 326a OR", "Art. 327 OR", " Art. 327a OR", "Art. 327b OR", "Art. 327c OR", "Art. 328 OR", "Art. 328a OR", "Art. 328b OR", "Art. 329 OR", "Art. 329a OR", "Art. 329b OR", "Art. 328c OR", "Art. 329d OR", "Art. 329e OR", "Art. 329f OR", "Art. 330 OR", "Art. 330a OR", "Art. 330b OR", "Art. 331 OR", "Art. 331a OR", "Art. 331b OR", "Art. 331c OR", "Art. 331d OR", "Art. 331e OR", "Art. 331f OR", "Art. 332 OR", "Art. 332a OR", "Art. 333 OR", "Art. 333a OR", "Art. 333b OR", "Art. 334 OR", "Art. 335 OR", "Art. 335a OR", "Art. 335b OR", "Art. 335c OR", "Art. 335d OR", "Art. 335e OR", "Art. 335f OR", "Art. 335g OR", "Art. 335h OR", "Art. 335i OR", "Art. 335j OR", "Art. 335k OR", "Art. 336 OR", "Art. 336a OR", "Art. 336b OR", "Art. 336c OR", "Art. 336d OR", "Art. 337 OR", "Art. 337a OR", "Art. 337b OR", "Art. 337c OR", "Art. 337d OR", "Arbeitsvertrag", "Einzelarbeitsvertrag", "Begriff", "Entstehung", "Pflichten des Arbeitgebers", "Lohn", "Höhe Lohn", "Anteil am Geschäftsergebnis", "Pflichten des Arbeitnehmers", "Persönliche Arbeitspflicht", "Sorgfalts- und Treuepflicht", "Sorgfaltspflicht", "Treuepflicht", "Rechenschafts- und Herausgabepflicht", "Rechenschaftspflicht", "Herausgabepflicht", "Überstundenarbeit", "Überstunden", "Befolgung von Anordnungen und Weisungen", "Anordnungen und Weisungen", "Anordnungen", "Weisungen", "Haftung des Arbeitnehmers", "Haftung", "Lohn", "Höhe Lohn", "Anteil am Geschäftsergebnis", "Provision", "Entstehung", "Abrechnung", "Gratifikation"]
+    "tags": [
+      "Art. 338 OR",
+      "Art. 338aa OR",
+      "Art. 339 OR",
+      "Art. 339a OR",
+      "Art. 339b OR",
+      "Art. 339c OR",
+      "Art. 339d OR",
+      "Art. 340 OR",
+      "Art. 340a OR",
+      "Art. 340b OR",
+      "Art. 340c OR",
+      "Art. 341 OR",
+      "Art. 342 OR",
+      "Art. 343 OR",
+      "Art. 319 OR",
+      "Art. 320 OR",
+      "Art. 321 OR",
+      "Art. 321a OR",
+      "Art. 321b OR",
+      "Art. 321c OR",
+      "Art. 321d OR",
+      "Art. 321e OR",
+      "Art. 322 OR",
+      "Art. 322a OR",
+      "Art. 322b OR",
+      "Art. 322c OR",
+      "Art. 322d OR",
+      "Art. 323 OR",
+      "Art. 323a OR",
+      "Art. 323b OR",
+      "Art. 324 OR",
+      "Art. 324a OR",
+      "Art. 324b OR",
+      "Art. 325 OR",
+      "Art. 326 OR",
+      "Art. 326a OR",
+      "Art. 327 OR",
+      " Art. 327a OR",
+      "Art. 327b OR",
+      "Art. 327c OR",
+      "Art. 328 OR",
+      "Art. 328a OR",
+      "Art. 328b OR",
+      "Art. 329 OR",
+      "Art. 329a OR",
+      "Art. 329b OR",
+      "Art. 328c OR",
+      "Art. 329d OR",
+      "Art. 329e OR",
+      "Art. 329f OR",
+      "Art. 330 OR",
+      "Art. 330a OR",
+      "Art. 330b OR",
+      "Art. 331 OR",
+      "Art. 331a OR",
+      "Art. 331b OR",
+      "Art. 331c OR",
+      "Art. 331d OR",
+      "Art. 331e OR",
+      "Art. 331f OR",
+      "Art. 332 OR",
+      "Art. 332a OR",
+      "Art. 333 OR",
+      "Art. 333a OR",
+      "Art. 333b OR",
+      "Art. 334 OR",
+      "Art. 335 OR",
+      "Art. 335a OR",
+      "Art. 335b OR",
+      "Art. 335c OR",
+      "Art. 335d OR",
+      "Art. 335e OR",
+      "Art. 335f OR",
+      "Art. 335g OR",
+      "Art. 335h OR",
+      "Art. 335i OR",
+      "Art. 335j OR",
+      "Art. 335k OR",
+      "Art. 336 OR",
+      "Art. 336a OR",
+      "Art. 336b OR",
+      "Art. 336c OR",
+      "Art. 336d OR",
+      "Art. 337 OR",
+      "Art. 337a OR",
+      "Art. 337b OR",
+      "Art. 337c OR",
+      "Art. 337d OR",
+      "Arbeitsvertrag",
+      "Einzelarbeitsvertrag",
+      "Begriff",
+      "Entstehung",
+      "Pflichten des Arbeitgebers",
+      "Lohn",
+      "Höhe Lohn",
+      "Anteil am Geschäftsergebnis",
+      "Pflichten des Arbeitnehmers",
+      "Persönliche Arbeitspflicht",
+      "Sorgfalts- und Treuepflicht",
+      "Sorgfaltspflicht",
+      "Treuepflicht",
+      "Rechenschafts- und Herausgabepflicht",
+      "Rechenschaftspflicht",
+      "Herausgabepflicht",
+      "Überstundenarbeit",
+      "Überstunden",
+      "Befolgung von Anordnungen und Weisungen",
+      "Anordnungen und Weisungen",
+      "Anordnungen",
+      "Weisungen",
+      "Haftung des Arbeitnehmers",
+      "Haftung",
+      "Lohn",
+      "Höhe Lohn",
+      "Anteil am Geschäftsergebnis",
+      "Provision",
+      "Entstehung",
+      "Abrechnung",
+      "Gratifikation"
+    ]
   }
 ]
