--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "browser-sync-webpack-plugin": "^1.2.0",
     "laravel-mix": "^1.4.5",
     "normalize-scss": "^7.0.0",
+    "ramda": "^0.24.1",
     "randomcolor": "^0.5.3",
     "vue": "^2.4.4",
     "vuex": "^2.4.1"
