--- a/frontend/src/js/areas.json
+++ b/frontend/src/js/areas.json
@@ -64,6 +64,7 @@
   {
     "name": "Werkvertragsrecht",
     "tags": [
+      "ART. 73 OR",
       "Art. 372 OR",
       "Art. 373 OR",
       "Art. 374 OR",
