--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "browser-sync": "^2.18.13",
     "browser-sync-webpack-plugin": "^1.2.0",
     "laravel-mix": "^1.4.5",
+    "moment": "^2.18.1",
     "normalize-scss": "^7.0.0",
     "ramda": "^0.24.1",
     "randomcolor": "^0.5.3",
